k8s/namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: namespace-dev
  labels:
    name: namespace-dev
    environment: development
