k8s/namespace-preprod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: preprod
  labels:
    name: preprod
    environment: pre-production
