k8s/namespace-release.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: release
  labels:
    name: release
    environment: production
