k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
  - port: 8010
    targetPort: 8010
    protocol: TCP
    name: http
  selector:
    app: backend
